--- a/404/index.html
+++ b/404/index.html
@@ -19,13 +19,25 @@
 <meta name="twitter:title" content="404">
 <meta name="twitter:description" content="Paddock Insight | 围场中的世界">
 <meta name="twitter:image" content="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160">
-<script type="application/ld+json">[{"@context":"http://schema.org","@type":"WebSite","publisher":{"@type":"Person","name":"PaddockInsight","description":"Awesome guy.","image":"https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160"},"url":"http://paddockinsight.com","image":"https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160","description":"Paddock Insight | 围场中的世界","author":{"@type":"Person","name":"PaddockInsight","description":"Awesome guy.","image":"https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160"},"inLanguage":{"@type":"Language","alternateName":"zh-Hans"}}]</script>
+<script type="application/ld+json">[{"@context":"http://schema.org","@type":"WebSite","publisher":{"@type":"Person","name":"PaddockInsight","description":"围场里的那些事","image":"https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160"},"url":"http://paddockinsight.com","image":"https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160","description":"Paddock Insight | 围场中的世界","author":{"@type":"Person","name":"PaddockInsight","description":"围场里的那些事","image":"https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=160"},"inLanguage":{"@type":"Language","alternateName":"zh-Hans"}}]</script>
 <link href="//fonts.loli.net/css?family=Baloo+Bhaijaan|Inconsolata|Josefin+Sans|Montserrat" rel="stylesheet">
 <link href="/styles.b052e0427aa70b7d0587.css" rel="stylesheet">
 <link rel="stylesheet" href="/theme.67070a9877b56462fae0.css">
-<script src="/config.2c760a733385bbb220c0.js"></script>
-<script async src="//www.googletagmanager.com/gtag/js?id=UA-00000000-0"></script>
-<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','UA-00000000-0');</script></head>
+<script src="/config.3661838bf214efd245dd.js"></script>
+
+<!-- Original GA deleted -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-65149227-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-65149227-4');
+</script>
+
+
+</head>
 <body lang="zh-Hans">
 <is-d2a57d></is-d2a57d>
 <script src="/runtime.9c308a63d02029c20228.js"></script>
