Cancel lazyload CDN from jsdelivr

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -623,7 +623,7 @@ console.log('\n %c Suka Theme (hexo-theme-suka) | © SukkaW | Verision 1.3.3 %c 
 
 <!-- vanilla-lazyload -->
 
-    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@8.9.0" async></script>
+    <script src="/lib/vanilla-lazyload/lazyload.min.js" async></script>
 
 
 
