--- a/about/index.html
+++ b/about/index.html
@@ -84,7 +84,7 @@ window.oldVersion = [
 <meta name="description" content="Paddock Insight 网站致力于分享与 F1 、赛车和汽车文化等方面有关的内容和信息。本网站内容除非注明，均为原创，未经允许，严禁转载。...">
 
 <!-- Keywords -->
-<meta name="keywords" content="F1,race,racing,car,赛车,汽车,formula one">
+<meta name="keywords" content="F1,赛车,汽车,racing,car,formula one,race,车手,赛车手,driver">
 
 <!-- Disable Fucking Bloody Baidu Tranformation -->
 <meta http-equiv="Cache-Control" content="no-transform">
