--- a/search/index.html
+++ b/search/index.html
@@ -25,6 +25,9 @@ window.oldVersion = [
 <!-- comment -->
 
 
+    <link rel="dns-prefetch" href="//disqus.com">
+    <link rel="dns-prefetch" href="//paddockinsight.disqus.com">
+
 
 
 
@@ -514,6 +517,8 @@ console.log('\n %c Suka Theme (hexo-theme-suka) | © SukkaW | Verision 1.3.3 %c 
 
 
 <!-- Comment -->
+
+    
 
 
 <!-- ### Custom Footer ### -->
