--- a/search/index.html
+++ b/search/index.html
@@ -451,7 +451,8 @@ searchNoResult += '<a href="https://www.google.com/search?&q=' + searchQuery.s +
 
         
         
-         <span class="footer-develop-divider"></span>
+        &nbsp;Powerd by <a href="https://github.com/">Github</a>.
+         <!-- <span class="footer-develop-divider"></span> -->
     </p>
 
     <a href="https://PaddockInsight.com/privacy">Privacy Policy | 隐私政策</a>
