--- a/privacy/index.html
+++ b/privacy/index.html
@@ -84,7 +84,7 @@ window.oldVersion = [
 <meta name="description" content="...">
 
 <!-- Keywords -->
-<meta name="keywords" content="F1,赛车,汽车,racing,car,formula one,race,车手,赛车手,driver">
+<meta name="keywords" content="F1,赛车,racing,formula one,race,车手,赛车手,赛车运动,racing driver,一级方程式">
 
 <!-- Disable Fucking Bloody Baidu Tranformation -->
 <meta http-equiv="Cache-Control" content="no-transform">
