--- a/index.html
+++ b/index.html
@@ -306,6 +306,15 @@ window.oldVersion = [
     
 
 
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-6081136368359314",
+        enable_page_level_ads: true
+    });
+    </script>
+
 </head>
 
     <body>
