--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ window.oldVersion = [
             
                 <div class="column column-thumbnail col-4 col-lg-12">
                     <a href="/post/20190708001/">
-                        <div class="post-thumbnail lazyload" data-bg="url(https://i.loli.net/2019/08/27/2Btq9MNQOJvbGha.jpg)"></div>
+                        <div class="post-thumbnail lazyload" data-bg="url(https://i.loli.net/2019/08/27/qPcIJpGnoi5vhYs.jpg)"></div>
                     </a>
                 </div>
                 <div class="column column-body col-8 col-lg-12">
@@ -702,6 +702,8 @@ console.log('\n %c Suka Theme (hexo-theme-suka) | © SukkaW | Verision 1.3.3 %c 
 
 <!-- ### Custom Footer ### -->
 
+
+<script type="text/javascript" src="//js.users.51.la/20298421.js"></script>
 
     </body>
 
