Add Sitemap link at footer

--- a/search/index.html
+++ b/search/index.html
@@ -467,6 +467,7 @@ searchNoResult += '<a href="https://www.google.com/search?&q=' + searchQuery.s +
         
         
         &nbsp;Powerd by <a href="https://github.com/">Github</a>.
+        &nbsp;<a href="https://PaddockInsight.com/sitemap.xml"> Sitemap </a>
          <!-- <span class="footer-develop-divider"></span> -->
     </p>
 
