--- a/privacy/index.html
+++ b/privacy/index.html
@@ -76,7 +76,7 @@ window.oldVersion = [
 <meta name="description" content="...">
 
 <!-- Keywords -->
-<meta name="keywords" content="F1,赛车,racing,formula one,车手,赛车手,赛车运动,racing driver,一级方程式,F1赛车,F1新闻,F1车队">
+<meta name="keywords" content="F1,赛车,formula one,赛车手,赛车运动,一级方程式,F1赛车,F1新闻,F1车队">
 
 <!-- Disable Fucking Bloody Baidu Tranformation -->
 <meta http-equiv="Cache-Control" content="no-transform">
