--- a/privacy/index.html
+++ b/privacy/index.html
@@ -591,7 +591,7 @@ window.oldVersion = [
     <a href="https://PaddockInsight.com/privacy">Privacy Policy | 隐私政策</a>
 
 
-    <script>
+    <!-- <script>
         (function(){
             var bp = document.createElement('script');
             var curProtocol = window.location.protocol.split(':')[0];
@@ -604,7 +604,7 @@ window.oldVersion = [
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(bp, s);
         })();
-    </script>
+    </script> -->
 
 
 </footer>
