--- a/search/index.html
+++ b/search/index.html
@@ -465,7 +465,7 @@ searchNoResult += '<a href="https://www.google.com/search?&q=' + searchQuery.s +
     <a href="https://PaddockInsight.com/privacy">Privacy Policy | 隐私政策</a>
 
 
-    <script>
+    <!-- <script>
         (function(){
             var bp = document.createElement('script');
             var curProtocol = window.location.protocol.split(':')[0];
@@ -478,7 +478,7 @@ searchNoResult += '<a href="https://www.google.com/search?&q=' + searchQuery.s +
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(bp, s);
         })();
-    </script>
+    </script> -->
 
 
 </footer>
